--- a/android/CarreirasElo7/app/src/main/res/layout/activity_main.xml
+++ b/android/CarreirasElo7/app/src/main/res/layout/activity_main.xml
@@ -88,36 +88,49 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/areas_linear_layout"
+                <ImageView
+                    android:id="@+id/main_areas_container"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginTop="16dp"
                     android:background="@color/lightGray"
-                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="@id/main_areas_flexbox"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/culturas_linear_layout"/>
+
+                <TextView
+                    android:id="@+id/main_areas_titulo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="20dp"
+                    android:text="@string/titulo_areas"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                     app:layout_constraintEnd_toEndOf="@id/culturas_linear_layout"
                     app:layout_constraintStart_toStartOf="@id/culturas_linear_layout"
-                    app:layout_constraintTop_toBottomOf="@id/culturas_linear_layout">
+                    app:layout_constraintTop_toBottomOf="@id/culturas_linear_layout" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:padding="10dp"
-                        android:text="@string/titulo_areas"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/main_areas_flexbox"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    app:flexWrap="wrap"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/main_areas_titulo">
 
-                </LinearLayout>
+                </com.google.android.flexbox.FlexboxLayout>
 
                 <ImageView
                     android:id="@+id/main_rodape_background"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@id/areas_linear_layout"
-                    app:layout_constraintStart_toStartOf="@id/areas_linear_layout"
-                    app:layout_constraintTop_toBottomOf="@id/areas_linear_layout"
+                    app:layout_constraintEnd_toEndOf="@id/main_areas_container"
+                    app:layout_constraintStart_toStartOf="@id/main_areas_container"
+                    app:layout_constraintTop_toBottomOf="@id/main_areas_container"
                     app:srcCompat="@android:color/darker_gray" />
 
                 <TextView
