--- a/android/CarreirasElo7/app/src/main/res/layout/activity_main.xml
+++ b/android/CarreirasElo7/app/src/main/res/layout/activity_main.xml
@@ -50,9 +50,9 @@
                     app:srcCompat="@drawable/titulo" />
 
                 <Spinner
-                    android:id="@+id/spinner"
+                    android:id="@+id/main_areas_spinner"
                     android:layout_width="300dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@android:drawable/spinner_dropdown_background"
                     app:layout_constraintEnd_toEndOf="@+id/imageView5"
@@ -161,16 +161,6 @@
                     app:layout_constraintStart_toStartOf="@id/main_rodape_background"
                     app:layout_constraintTop_toBottomOf="@id/main_rodape_titulo"
                     app:layout_constraintVertical_bias="0.0">
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/facebook" />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/linkedin" />
 
                 </com.google.android.flexbox.FlexboxLayout>
 
