--- a/android/CarreirasElo7/app/src/main/res/values/styles.xml
+++ b/android/CarreirasElo7/app/src/main/res/values/styles.xml
@@ -3,9 +3,15 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/menuPrimary</item>
+        <item name="colorPrimaryDark">@android:color/darker_gray</item>
+        <item name="android:actionMenuTextColor">@color/menuText</item>
+        <item name="actionOverflowButtonStyle">@style/BotaoMenuAzul</item>
     </style>
+
+    <style name="BotaoMenuAzul" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
+        <item name="android:tint">@color/menuText</item>
+    </style>
+
 
 </resources>
