--- a/android/CarreirasElo7/app/src/main/res/values/styles.xml
+++ b/android/CarreirasElo7/app/src/main/res/values/styles.xml
@@ -6,11 +6,17 @@
         <item name="colorPrimary">@color/menuPrimary</item>
         <item name="colorPrimaryDark">@android:color/darker_gray</item>
         <item name="android:actionMenuTextColor">@color/menuText</item>
-        <item name="actionOverflowButtonStyle">@style/BotaoMenuAzul</item>
+        <item name="actionOverflowButtonStyle">@style/AppTheme.BotaoMenu</item>
+        <item name="actionBarStyle">@style/AppTheme.ActionBar</item>
     </style>
 
-    <style name="BotaoMenuAzul" parent="@style/Widget.AppCompat.ActionButton.Overflow" >
+    <style name="AppTheme.BotaoMenu">
         <item name="android:tint">@color/menuText</item>
+    </style>
+
+    <style name="AppTheme.ActionBar">
+        <item name="logo">@drawable/logo</item>
+        <item name="displayOptions">useLogo|showHome</item>
     </style>
 
 
