finalizada api, implementado GET conteudo e melhorias de layout

--- a/android/CarreirasElo7/app/src/main/res/layout/activity_main.xml
+++ b/android/CarreirasElo7/app/src/main/res/layout/activity_main.xml
@@ -2,13 +2,14 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainConstraint"
+    android:id="@+id/main_constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
 
     <ScrollView
+        android:id="@+id/main_scroll_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -19,16 +20,18 @@
         app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
+            android:id="@+id/main_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/main_constraint_inside"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/main_top_background"
                     android:layout_width="0dp"
                     android:layout_height="250dp"
                     android:contentDescription="@string/img_banner"
@@ -39,25 +42,25 @@
                     app:srcCompat="@drawable/heroshot" />
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/main_imagem_titulo"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="35dp"
                     android:contentDescription="@string/titulo"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/imageView4"
+                    app:layout_constraintTop_toTopOf="@+id/main_top_background"
                     app:srcCompat="@drawable/titulo" />
 
                 <Spinner
                     android:id="@+id/main_areas_spinner"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:background="@android:drawable/spinner_dropdown_background"
-                    app:layout_constraintEnd_toEndOf="@+id/imageView5"
-                    app:layout_constraintStart_toStartOf="@+id/imageView5"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+                    app:layout_constraintBottom_toTopOf="@+id/culturas_linear_layout"
+                    app:layout_constraintEnd_toEndOf="@+id/main_imagem_titulo"
+                    app:layout_constraintStart_toStartOf="@+id/main_imagem_titulo"
+                    app:layout_constraintTop_toBottomOf="@+id/main_imagem_titulo" />
 
                 <LinearLayout
                     android:id="@+id/culturas_linear_layout"
@@ -65,9 +68,9 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="0dp"
                     android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="@id/imageView4"
-                    app:layout_constraintStart_toStartOf="@id/imageView4"
-                    app:layout_constraintTop_toBottomOf="@+id/imageView4">
+                    app:layout_constraintEnd_toEndOf="@id/main_top_background"
+                    app:layout_constraintStart_toStartOf="@id/main_top_background"
+                    app:layout_constraintTop_toBottomOf="@+id/main_top_background">
 
                     <TextView
                         android:id="@+id/main_titulo_culturas"
@@ -76,6 +79,7 @@
                         android:layout_gravity="center_horizontal"
                         android:padding="10dp"
                         android:text="@string/titulo_culturas"
+                        android:textAllCaps="true"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
                     <TextView
@@ -97,29 +101,32 @@
                     app:layout_constraintBottom_toBottomOf="@id/main_areas_flexbox"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/culturas_linear_layout"/>
+                    app:layout_constraintTop_toBottomOf="@id/culturas_linear_layout" />
 
                 <TextView
-                    android:id="@+id/main_areas_titulo"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/main_titulo_areas"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:padding="20dp"
+                    android:gravity="center_horizontal"
+                    android:padding="16dp"
                     android:text="@string/titulo_areas"
+                    android:textAllCaps="true"
                     android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    app:layout_constraintBottom_toTopOf="@id/main_areas_flexbox"
                     app:layout_constraintEnd_toEndOf="@id/culturas_linear_layout"
                     app:layout_constraintStart_toStartOf="@id/culturas_linear_layout"
-                    app:layout_constraintTop_toBottomOf="@id/culturas_linear_layout" />
+                    app:layout_constraintTop_toTopOf="@id/main_areas_container" />
 
                 <com.google.android.flexbox.FlexboxLayout
                     android:id="@+id/main_areas_flexbox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:paddingBottom="16dp"
                     app:flexWrap="wrap"
+                    app:layout_constraintBottom_toTopOf="@id/main_rodape_background"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/main_areas_titulo">
+                    app:layout_constraintTop_toBottomOf="@id/main_titulo_areas">
 
                 </com.google.android.flexbox.FlexboxLayout>
 
@@ -134,32 +141,34 @@
                     app:srcCompat="@android:color/darker_gray" />
 
                 <TextView
-                    android:id="@+id/main_rodape_titulo"
+                    android:id="@+id/main_titulo_rodape"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
-                    app:layout_constraintVertical_bias="0.0"
-                    android:textColor="@android:color/white"
-                    android:text="@string/titulo_rodape"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    app:layout_constraintStart_toStartOf="@id/main_rodape_background"
-                    app:layout_constraintEnd_toEndOf="@id/main_rodape_background"
                     android:gravity="center"
+                    android:text="@string/titulo_rodape"
+                    android:textAllCaps="true"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/main_rodape_background"
+                    app:layout_constraintEnd_toEndOf="@id/main_rodape_background"
+                    app:layout_constraintStart_toStartOf="@id/main_rodape_background"
                     app:layout_constraintTop_toTopOf="@id/main_rodape_background"
-                    app:layout_constraintBottom_toBottomOf="@id/main_rodape_background"/>
+                    app:layout_constraintVertical_bias="0.0" />
 
                 <com.google.android.flexbox.FlexboxLayout
                     android:id="@+id/main_social_container"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:layout_marginTop="16dp"
                     app:flexWrap="wrap"
                     app:justifyContent="center"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"
                     app:layout_constraintBottom_toBottomOf="@+id/main_rodape_background"
                     app:layout_constraintEnd_toEndOf="@id/main_rodape_background"
                     app:layout_constraintStart_toStartOf="@id/main_rodape_background"
-                    app:layout_constraintTop_toBottomOf="@id/main_rodape_titulo"
+                    app:layout_constraintTop_toBottomOf="@id/main_titulo_rodape"
                     app:layout_constraintVertical_bias="0.0">
 
                 </com.google.android.flexbox.FlexboxLayout>
