--- a/android/CarreirasElo7/app/src/main/res/layout/area_spinner_row.xml
+++ b/android/CarreirasElo7/app/src/main/res/layout/area_spinner_row.xml
@@ -1,57 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Deixei o ícone sem relação com os outros elementos da tela,
+        assim posso utilizar o método setVisibility(View.GONE) quando
+        o src da imagem for nulo, sem quebrar o layout
+     -->
     <ImageView
         android:id="@+id/area_spinner_row_icon"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/area_spinner_row_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_margin="8dp"
+        app:layout_constraintEnd_toStartOf="@id/area_spinner_row_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/area_spinner_row_text"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintTop_toTopOf="@id/area_spinner_row_text"
+        app:layout_constraintBottom_toBottomOf="@id/area_spinner_row_text"
+        app:layout_constraintVertical_bias="0.5"
+        />
 
     <TextView
         android:id="@+id/area_spinner_row_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:text="@string/area_spinner_titulo"
+        android:layout_margin="8dp"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="@id/area_spinner_row_arrow"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/area_spinner_row_arrow"
-        app:layout_constraintStart_toEndOf="@+id/area_spinner_row_icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintWidth_percent="0.7"/>
 
     <ImageView
         android:id="@+id/area_spinner_row_arrow"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/area_spinner_row_text"
+        app:layout_constraintBottom_toBottomOf="@id/area_spinner_row_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/area_spinner_row_text"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/area_spinner_row_text"
+        app:layout_constraintVertical_bias="0.5"
         app:srcCompat="@drawable/arrow" />
 
 </android.support.constraint.ConstraintLayout>
