--- a/android/CarreirasElo7/app/src/main/res/layout/area_spinner_row.xml
+++ b/android/CarreirasElo7/app/src/main/res/layout/area_spinner_row.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:text="@string/area_spinner_titulo"
         android:layout_margin="8dp"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@id/area_spinner_row_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
